@@ -142,34 +142,6 @@ name|TimeUnit
 import|;
 end_import
 
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|locks
-operator|.
-name|ReadWriteLock
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|locks
-operator|.
-name|ReentrantReadWriteLock
-import|;
-end_import
-
 begin_comment
 comment|/**  * Provides access to the<code>AccessControlList</code>s used by KMS,  * hot-reloading them if the<code>kms-acls.xml</code> file where the ACLs  * are defined has been updated.  */
 end_comment
@@ -265,6 +237,8 @@ init|=
 literal|1000
 decl_stmt|;
 DECL|field|acls
+specifier|private
+specifier|volatile
 name|Map
 argument_list|<
 name|Type
@@ -272,11 +246,6 @@ argument_list|,
 name|AccessControlList
 argument_list|>
 name|acls
-decl_stmt|;
-DECL|field|lock
-specifier|private
-name|ReadWriteLock
-name|lock
 decl_stmt|;
 DECL|field|executorService
 specifier|private
@@ -295,12 +264,6 @@ name|Configuration
 name|conf
 parameter_list|)
 block|{
-name|lock
-operator|=
-operator|new
-name|ReentrantReadWriteLock
-argument_list|()
-expr_stmt|;
 if|if
 condition|(
 name|conf
@@ -340,18 +303,14 @@ name|Configuration
 name|conf
 parameter_list|)
 block|{
-name|lock
-operator|.
-name|writeLock
-argument_list|()
-operator|.
-name|lock
-argument_list|()
-expr_stmt|;
-try|try
-block|{
-name|acls
-operator|=
+name|Map
+argument_list|<
+name|Type
+argument_list|,
+name|AccessControlList
+argument_list|>
+name|tempAcls
+init|=
 operator|new
 name|HashMap
 argument_list|<
@@ -360,7 +319,7 @@ argument_list|,
 name|AccessControlList
 argument_list|>
 argument_list|()
-expr_stmt|;
+decl_stmt|;
 for|for
 control|(
 name|Type
@@ -387,7 +346,7 @@ argument_list|,
 name|ACL_DEFAULT
 argument_list|)
 decl_stmt|;
-name|acls
+name|tempAcls
 operator|.
 name|put
 argument_list|(
@@ -412,18 +371,10 @@ name|aclStr
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-finally|finally
-block|{
-name|lock
-operator|.
-name|writeLock
-argument_list|()
-operator|.
-name|unlock
-argument_list|()
+name|acls
+operator|=
+name|tempAcls
 expr_stmt|;
-block|}
 block|}
 annotation|@
 name|Override
@@ -607,44 +558,13 @@ argument_list|(
 name|user
 argument_list|)
 decl_stmt|;
-name|AccessControlList
-name|acl
-init|=
-literal|null
-decl_stmt|;
-name|lock
-operator|.
-name|readLock
-argument_list|()
-operator|.
-name|lock
-argument_list|()
-expr_stmt|;
-try|try
-block|{
-name|acl
-operator|=
+return|return
 name|acls
 operator|.
 name|get
 argument_list|(
 name|type
 argument_list|)
-expr_stmt|;
-block|}
-finally|finally
-block|{
-name|lock
-operator|.
-name|readLock
-argument_list|()
-operator|.
-name|unlock
-argument_list|()
-expr_stmt|;
-block|}
-return|return
-name|acl
 operator|.
 name|isUserAllowed
 argument_list|(
